hands-on/k8s-voting-app/frontend/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
spec:
  rules:
    - host: result-${STUDENT_ID}-ing.apps.cluster-r7w8k.r7w8k.sandbox930.opentlc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
